--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -113,22 +113,23 @@
     "    !rm -rd ~/SDZ/models/insightface\n",
     "    !ln -vs /tmp/insightface /home/studio-lab-user/SDZ/models/insightface\n",
     "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/uwg/modelz_base/resolve/main/Extras/roopz/inswapper_128.onnx -d /home/studio-lab-user/SDZ/models/insightface -o inswapper_128.onnx\n",
-    "    #!rm -rf ~/SDZC/models/insightface\n",
-    "    !ln -vs /tmp/insightface/* /home/studio-lab-user/SDZC/models/insightface\n",
-    "    \n",
+    "    !rm -rd ~/SDZC/models/insightface\n",
+    "    !ln -vs /tmp/insightface /home/studio-lab-user/SDZC/models\n",
+    "\n",
+    "    !mkdir -p /tmp/GFPGAN\n",
+    "    !rm -rd ~/SDZ/models/GFPGAN\n",
+    "    !ln -vs /tmp/GFPGAN /home/studio-lab-user/SDZ/models/GFPGAN\n",
+    "    !rm -rd ~/SDZC/models/facerestore_models\n",
+    "    !ln -vs /tmp/GFPGAN /home/studio-lab-user/SDZC/models/facerestore_models\n",
+    "    %cd ~/SDZ/models/GFPGAN\n",
+    "    !wget https://github.com/TencentARC/GFPGAN/releases/download/v1.3.4/GFPGANv1.4.pth\n",
+    "\n",
     "    !mkdir -p /tmp/Codeformer\n",
     "    !rm -rd ~/SDZ/models/Codeformer\n",
     "    !ln -vs /tmp/Codeformer /home/studio-lab-user/SDZ/models/Codeformer\n",
     "    !ln -vs /tmp/Codeformer/* /home/studio-lab-user/SDZC/models/facerestore_models\n",
     "    %cd ~/SDZ/models/Codeformer\n",
     "    !wget https://github.com/sczhou/CodeFormer/releases/download/v0.1.0/codeformer.pth\n",
-    "\n",
-    "    !mkdir -p /tmp/GFPGAN\n",
-    "    !rm -rd ~/SDZ/models/GFPGAN\n",
-    "    !ln -vs /tmp/GFPGAN /home/studio-lab-user/SDZ/models/GFPGAN\n",
-    "    !ln -vs /tmp/GFPGAN/* /home/studio-lab-user/SDZC/models/facerestore_models\n",
-    "    %cd ~/SDZ/models/GFPGAN\n",
-    "    !wget https://github.com/TencentARC/GFPGAN/releases/download/v1.3.4/GFPGANv1.4.pth\n",
     "\n",
     "    !mkdir -p /tmp/deepbooru\n",
     "    !rm -rd ~/SDZ/models/deepbooru\n",
