--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -317,7 +317,7 @@
     "    !git clone https://github.com/Acly/comfyui-tooling-nodes\n",
     "    !git clone https://github.com/cubiq/ComfyUI_IPAdapter_plus\n",
     "    !git clone https://github.com/Fannovel16/comfyui_controlnet_aux\n",
-    "    !git clone https://github.com/Gourieff/comfyui-reactor-node\n",
+    "    #!git clone https://github.com/Gourieff/comfyui-reactor-node\n",
     "    !git clone https://github.com/mav-rik/facerestore_cf\n",
     "    #!git clone https://github.com/chrisgoringe/cg-use-everywhere\n",
     "    \n",
