--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -15,6 +15,7 @@
     "from IPython.utils import capture\n",
     "import requests\n",
     "import importlib.util\n",
+    "import subprocess\n",
     "COLOR_CYAN = '\\033[96;1;38;5;51m'\n",
     "COLOR_WHITE = '\\033[97m'\n",
     "COLOR_RESET = '\\033[0m'\n",
@@ -39,6 +40,9 @@
     "    %cd /home/studio-lab-user\n",
     "\n",
     "    #!conda install -c conda-forge libglib -y & conda update -n base conda -y\n",
+    "    !conda install -q -y conda=23.10.0 glib gxx_linux-64 pyngrok ffmpeg av gst-libav imageio imageio-ffmpeg\n",
+    "    !conda install -q -y -n base python=3.10.12\n",
+    "\n",
     "\n",
     "    !pip install -q --upgrade torchsde\n",
     "    !pip install -q --upgrade pip\n",
@@ -83,10 +87,17 @@
     "    %cd /home/studio-lab-user/SDZC\n",
     "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/extra_model_paths.yaml\n",
     "    !pip install -r /home/studio-lab-user/SDZC/requirements.txt\n",
+    "\n",
+    "    !curl -Lo /home/studio-lab-user/SDZC/pantat88.py https://huggingface.co/pantat88/ui/resolve/main/pantat88.py\n",
+    "    %run /home/studio-lab-user/SDZC/pantat88.py\n",
     "    \n",
     "    !pip cache purge\n",
     "    !rm -rf ~/.cache\n",
     "    %conda clean --all -y\n",
+    "\n",
+    "    !python --version\n",
+    "    import os\n",
+    "    os._exit(00)\n",
     "\n",
     "    \n",
     "    clear_output()\n",
@@ -304,24 +315,58 @@
     "    os.mkdir(folderext2)\n",
     "    \n",
     "    %cd /home/studio-lab-user/SDZC/custom_nodes\n",
-    "    !git clone https://github.com/Lerc/canvas_tab\n",
+    "    !git clone -q https://github.com/ssitu/ComfyUI_UltimateSDUpscale --recursive\n",
     "    !git clone https://github.com/ltdrdata/ComfyUI-Manager\n",
-    "    !git clone https://github.com/0xbitches/ComfyUI-LCM\n",
-    "    !git clone https://github.com/ssitu/ComfyUI_UltimateSDUpscale --recursive\n",
     "    !git clone https://github.com/pythongosssss/ComfyUI-Custom-Scripts\n",
     "    !git clone https://github.com/city96/SD-Latent-Upscaler\n",
     "    !git clone https://github.com/LucianoCirino/efficiency-nodes-comfyui\n",
     "    !git clone https://github.com/BlenderNeko/ComfyUI_ADV_CLIP_emb\n",
     "    !git clone https://github.com/ssitu/ComfyUI_NestedNodeBuilder\n",
+    "    !git clone -q https://github.com/Kosinkadink/ComfyUI-Advanced-ControlNet\n",
+    "    !git clone -q https://github.com/Fannovel16/comfyui_controlnet_aux\n",
+    "    !git clone -q https://github.com/SLAPaper/ComfyUI-Image-Selector\n",
+    "    !git clone -q https://github.com/Derfuu/Derfuu_ComfyUI_ModdedNodes\n",
+    "    !git clone -q https://github.com/FizzleDorf/ComfyUI_FizzNodes\n",
+    "    !git clone -q https://github.com/WASasquatch/was-node-suite-comfyui\n",
+    "    !git clone -q https://github.com/Kosinkadink/ComfyUI-VideoHelperSuite\n",
+    "    !git clone -q https://github.com/Gourieff/comfyui-reactor-node ~/SDZC/custom_nodes/comfyui-reactor-node\n",
+    "    !git clone -q https://github.com/mav-rik/facerestore_cf ~/SDZC/custom_nodes/facerestore_cf \n",
+    "    #!git clone https://github.com/Gourieff/comfyui-reactor-node\n",
+    "    #!git clone https://github.com/mav-rik/facerestore_cf\n",
+    "\n",
+    "\n",
+    "    \"\"\"\"\"\"\"\"\"\n",
+    "\n",
+    "    !git clone -q https://github.com/Kosinkadink/ComfyUI-AnimateDiff-Evolved ~/SDZC/custom_nodes/ComfyUI-AnimateDiff-Evolved\n",
+    "    %download https://huggingface.co/guoyww/animatediff/resolve/main/mm_sd_v15_v2.ckpt /home/studio-lab-user/ComfyUI/custom_nodes/ComfyUI-AnimateDiff-Evolved/models\n",
+    "    %cd -q ~/ComfyUI/custom_nodes/ComfyUI-AnimateDiff-Evolved/motion_lora\n",
+    "    %download https://huggingface.co/guoyww/animatediff/resolve/main/v2_lora_PanLeft.ckpt\n",
+    "    %download https://huggingface.co/guoyww/animatediff/resolve/main/v2_lora_PanRight.ckpt\n",
+    "    %download https://huggingface.co/guoyww/animatediff/resolve/main/v2_lora_RollingAnticlockwise.ckpt\n",
+    "    %download https://huggingface.co/guoyww/animatediff/resolve/main/v2_lora_RollingClockwise.ckpt\n",
+    "    %download https://huggingface.co/guoyww/animatediff/resolve/main/v2_lora_TiltDown.ckpt\n",
+    "    %download https://huggingface.co/guoyww/animatediff/resolve/main/v2_lora_TiltUp.ckpt\n",
+    "    %download https://huggingface.co/guoyww/animatediff/resolve/main/v2_lora_ZoomIn.ckpt\n",
+    "    %download https://huggingface.co/guoyww/animatediff/resolve/main/v2_lora_ZoomOut.ckpt\n",
+    "\n",
+    "    \"\"\"\"\"\"\"\"\"\n",
+    "\n",
+    "    !git clone https://github.com/Lerc/canvas_tab\n",
+    "    \n",
+    "    !git clone https://github.com/0xbitches/ComfyUI-LCM\n",
+    " \n",
     "    !git clone https://github.com/RockOfFire/ComfyUI_Comfyroll_CustomNodes\n",
     "    !git clone https://github.com/Acly/comfyui-tooling-nodes\n",
     "    !git clone https://github.com/cubiq/ComfyUI_IPAdapter_plus\n",
-    "    !git clone https://github.com/Fannovel16/comfyui_controlnet_aux\n",
+    "\n",
     "    !git clone https://github.com/shadowcz007/comfyui-mixlab-nodes\n",
     "    #!git clone https://github.com/chrisgoringe/cg-use-everywhere\n",
     "\n",
-    "    #!git clone https://github.com/Gourieff/comfyui-reactor-node\n",
-    "    #!git clone https://github.com/mav-rik/facerestore_cf\n",
+    "\n",
+    "\n",
+    "    %cd -q ~/SDZC\n",
+    "    !pip install opencv-python==4.7.0.72 transformers==4.26.1 tokenizers clip-interrogator > /dev/null\n",
+    "    ![ -f \"custom_nodes/ComfyUI-Manager/scripts/colab-dependencies.py\" ] && python \"custom_nodes/ComfyUI-Manager/scripts/colab-dependencies.py\" > /dev/null\n",
     "    \n",
     "    %cd /home/studio-lab-user/SDZC/web/scripts\n",
     "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/ComfyUI_app.js -O app.js\n",
