--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -88,8 +88,8 @@
     "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/extra_model_paths.yaml\n",
     "    !pip install -r /home/studio-lab-user/SDZC/requirements.txt\n",
     "\n",
-    "    !curl -Lo /home/studio-lab-user/SDZC/pantat88.py https://huggingface.co/pantat88/ui/resolve/main/pantat88.py\n",
-    "    %run /home/studio-lab-user/SDZC/pantat88.py\n",
+    "    #!curl -Lo /home/studio-lab-user/SDZC/pantat88.py https://huggingface.co/pantat88/ui/resolve/main/pantat88.py\n",
+    "    #%run /home/studio-lab-user/SDZC/pantat88.py\n",
     "    \n",
     "    !pip cache purge\n",
     "    !rm -rf ~/.cache\n",
@@ -368,6 +368,8 @@
     "    !pip install opencv-python==4.7.0.72 transformers==4.26.1 tokenizers clip-interrogator > /dev/null\n",
     "    ![ -f \"custom_nodes/ComfyUI-Manager/scripts/colab-dependencies.py\" ] && python \"custom_nodes/ComfyUI-Manager/scripts/colab-dependencies.py\" > /dev/null\n",
     "    \n",
+    "\n",
+    "\n",
     "    %cd /home/studio-lab-user/SDZC/web/scripts\n",
     "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/ComfyUI_app.js -O app.js\n",
     "    %cd /home/studio-lab-user/SDZC/web\n",
@@ -424,9 +426,6 @@
     "    !mkdir -p /tmp/VAE\n",
     "    !rm -rd ~/SDZ/models/VAE\n",
     "    !ln -vs /tmp/VAE /home/studio-lab-user/SDZ/models/VAE\n",
-    "    %cd ~/SDZ/models/VAE\n",
-    "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/uwg/modelz_base/resolve/main/VAE/vae-ft-mse-840000-ema-pruned.ckpt -o vae-ft-mse-840000-ema-pruned.ckpt\n",
-    "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/uwg/modelz_base/resolve/main/VAE/sdxl-vae-fp16.safetensors -o sdxl-vae-fp16.safetensors\n",
     "\n",
     "    #Embeddings\n",
     "    !mkdir -p /tmp/embeddings\n",
@@ -450,6 +449,7 @@
     "    %cd ~/SDZ/models/Lora\n",
     "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://civitai.com/api/download/models/87153   -o add_detail.safetensors\n",
     "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://civitai.com/api/download/models/86247   -o flat2.safetensors\n",
+    "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://civitai.com/api/download/models/171989   -o detail_slider_v4.safetensors\n",
     "    !wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/Lora/epiNoiseoffset_v2.safetensors\n",
     "    !wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/Lora/theovercomer8sContrastFix_sd15.safetensors\n",
     "    !wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/Lora/to8sHighKeyLORSDZ15SD2_sd15.safetensors\n",
@@ -515,12 +515,7 @@
     "            #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/t2iadapter_sketch-fp16.safetensors -o t2iadapter_sketch-fp16.safetensors\n",
     "            #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/t2iadapter_style-fp16.safetensors -o t2iadapter_style-fp16.safetensors\n",
     "\n",
-    "            #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://civitai.com/api/download/models/85428 -o lightingBasedPicture_v10.safetensors\n",
-    "            #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://civitai.com/api/download/models/111973 -o controlnetQRPatternQR_v20.safetensors\n",
-    "            #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/h94/IP-Adapter/resolve/main/models/ip-adapter-plus-face_sd15.bin -o ip-adapter-plus-face_sd15.pth\n",
-    "            #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/h94/IP-Adapter/resolve/main/models/ip-adapter-plus_sd15.bin -o ip-adapter-plus_sd15.pth\n",
-    "            #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/h94/IP-Adapter/resolve/main/models/ip-adapter_sd15.bin -o ip-adapter_sd15.pth\n",
-    "            #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/h94/IP-Adapter/resolve/main/models/ip-adapter_sd15_light.bin -o ip-adapter_sd15_light.pth\n",
+    "\n",
     "\n",
     "            !mkdir -p /tmp/clip_vision\n",
     "            !rm -rd ~/SDZ/extensions/sd-webui-controlnet/annotator/downloads/clip_vision\n",
@@ -530,7 +525,17 @@
     "\n",
     "\n",
     "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/h94/IP-Adapter/resolve/main/models/ip-adapter_sd15.safetensors -d /home/studio-lab-user/SDZC/custom_nodes/ComfyUI_IPAdapter_plus/models -o ip-adapter_sd15.safetensors\n",
+    "            #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://civitai.com/api/download/models/85428 -o lightingBasedPicture_v10.safetensors\n",
+    "            #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://civitai.com/api/download/models/111973 -o controlnetQRPatternQR_v20.safetensors\n",
+    "            #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/h94/IP-Adapter/resolve/main/models/ip-adapter-plus-face_sd15.bin -o ip-adapter-plus-face_sd15.pth\n",
+    "            #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/h94/IP-Adapter/resolve/main/models/ip-adapter-plus_sd15.bin -o ip-adapter-plus_sd15.pth\n",
+    "            #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/h94/IP-Adapter/resolve/main/models/ip-adapter_sd15.bin -o ip-adapter_sd15.pth\n",
+    "            #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/h94/IP-Adapter/resolve/main/models/ip-adapter_sd15_light.bin -o ip-adapter_sd15_light.pth\n",
     "\n",
+    "\n",
+    "\n",
+    "            %cd ~/SDZ/models/VAE\n",
+    "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/uwg/modelz_base/resolve/main/VAE/vae-ft-mse-840000-ema-pruned.ckpt -o vae-ft-mse-840000-ema-pruned.ckpt\n",
     "\n",
     "            \n",
     "            !pip cache purge\n",
@@ -596,6 +601,9 @@
     "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/latent-consistency/lcm-lora-sdxl/resolve/main/pytorch_lora_weights.safetensors -d /home/studio-lab-user/SDZ/models/Lora -o lcm-lora-sdxl.safetensors\n",
     "\n",
     "\n",
+    "            %cd ~/SDZ/models/VAE\n",
+    "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/uwg/modelz_base/resolve/main/VAE/sdxl-vae-fp16.safetensors -o sdxl-vae-fp16.safetensors\n",
+    "\n",
     "            !pip cache purge\n",
     "            !rm -rf ~/.cache\n",
     "            %conda clean --all -y\n",
@@ -654,7 +662,7 @@
     "    #!rm -r /home/studio-lab-user/.ngrok2\n",
     "    print(ngrok_output_queue.get())\n",
     "\n",
-    "    SDZ_Args = f\"--ngrok {ngrok_token} --preview-method auto --enable-cors-header --use-pytorch-cross-attention\"\n",
+    "    SDZ_Args = f\"--ngrok {ngrok_token} --dont-print-server\"\n",
     "    !COMMANDLINE_ARGS=\"{SDZ_Args}\" python main.py 2>&1 | grep -o 'URL: https://[^ ]*'\n",
     "    !pip cache purge\n",
     "    !rm -rf ~/.cache\n",
