--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -97,8 +97,8 @@
     "\n",
     "    !python --version\n",
     "    clear_output()\n",
-    "    import os\n",
-    "    os._exit(00)\n",
+    "    #import os\n",
+    "    #os._exit(00)\n",
     "    print(COLOR_CYAN + \"SDZ INSTALLED\" + COLOR_RESET)\n",
     "\n",
     "\n",
