imagen delete comfyui

--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -78,7 +78,7 @@
     "    #Config\n",
     "    %cd /home/studio-lab-user/SDZ\n",
     "\n",
-    "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/notification.mp3 -O notification.mp3\n",
+    "    #!wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/notification.mp3 -O notification.mp3\n",
     "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/SDZ_user.css -O user.css\n",
     "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/styles.csv\n",
     "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/SDZ_config.json -O config.json\n",
@@ -368,10 +368,12 @@
     "    \n",
     "\n",
     "\n",
-    "    %cd /home/studio-lab-user/SDZC/web/scripts\n",
-    "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/ComfyUI_app.js -O app.js\n",
+    "    #%cd /home/studio-lab-user/SDZC/web/scripts\n",
+    "    #!wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/ComfyUI_app.js -O app.js\n",
     "    %cd /home/studio-lab-user/SDZC/web\n",
     "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/ComfyUI_user.css -O user.css\n",
+    "    !rm ~/SDZC/input/example.png\n",
+    "\n",
     "\n",
     "    !mkdir -p /tmp/ESRGAN\n",
     "    !rm -rd ~/SDZ/models/ESRGAN\n",
@@ -660,7 +662,7 @@
     "    #!rm -r /home/studio-lab-user/.ngrok2\n",
     "    print(ngrok_output_queue.get())\n",
     "\n",
-    "    SDZ_Args = f\"--ngrok {ngrok_token} --dont-print-server\"\n",
+    "    SDZ_Args = f\"--ngrok {ngrok_token} --dont-print-server --xformers --theme=dark\"\n",
     "    !COMMANDLINE_ARGS=\"{SDZ_Args}\" python main.py 2>&1 | grep -o 'URL: https://[^ ]*'\n",
     "    !pip cache purge\n",
     "    !rm -rf ~/.cache\n",
