--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -35,9 +35,9 @@
     "\n",
     "def opcion1():\n",
     "    print(COLOR_CYAN + \"WAIT A MOMENT WHILE THE INSTALLATION FINISH\" + COLOR_RESET)\n",
+    "    !rm -rf /home/studio-lab-user/*\n",
+    "\n",
     "    !ln -vs /tmp ~/tmp\n",
-    "    \n",
-    "    %cd /home/studio-lab-user\n",
     "\n",
     "    #!conda install -c conda-forge libglib -y & conda update -n base conda -y\n",
     "    !conda install -q -y conda=23.10.0 glib gxx_linux-64 pyngrok ffmpeg av gst-libav imageio imageio-ffmpeg\n",
