--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -40,8 +40,9 @@
     "    !ln -vs /tmp ~/tmp\n",
     "\n",
     "    #!conda install -c conda-forge libglib -y & conda update -n base conda -y\n",
-    "    !conda install -q -y conda=23.10.0 glib gxx_linux-64 pyngrok ffmpeg av gst-libav imageio imageio-ffmpeg\n",
-    "    !conda install -q -y -n base python=3.10.12\n",
+    "    #!pip install https://download.pytorch.org/whl/cu118/xformers-0.0.22.post4%2Bcu118-cp310-cp310-manylinux2014_x86_64.whl torchvision --extra-index-url https://download.pytorch.org/whl/cu118\n",
+    "    #!conda install -q -y conda=23.10.0 glib gxx_linux-64 pyngrok ffmpeg av gst-libav imageio imageio-ffmpeg\n",
+    "    #!conda install -q -y -n base python=3.10.12\n",
     "\n",
     "\n",
     "    !pip install -q --upgrade torchsde\n",
@@ -59,6 +60,7 @@
     "    %pip install -q opencv-python-headless huggingface-hub\n",
     "    !pip3 install --upgrade requests\n",
     "    !pip install -q torch==2.0.1+cu118 torchvision==0.15.2+cu118 torchaudio==2.0.2+cu118 torchtext==0.15.2 torchdata==0.6.1 --extra-index-url https://download.pytorch.org/whl/cu118 -U\n",
+    "    \n",
     "    !pip install -q xformers==0.0.20 triton==2.0.0 -U\n",
     "\n",
     "    #!pip install opencv-python-headless ; pip install  opencv-contrib-python ; pip install opencv-python\n",
@@ -71,25 +73,26 @@
     "    %env TF_CPP_MIN_LOG_LEVEL=1\n",
     "    !git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui\n",
     "    !mv stable-diffusion-webui SDZ\n",
+    "    \n",
     "    %cd /home/studio-lab-user\n",
     "    !git clone https://github.com/comfyanonymous/ComfyUI\n",
     "    !mv ComfyUI SDZC\n",
     "\n",
     "    #Config\n",
     "    %cd /home/studio-lab-user/SDZ\n",
-    "\n",
     "    #!wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/notification.mp3 -O notification.mp3\n",
     "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/SDZ_user.css -O user.css\n",
     "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/styles.csv\n",
     "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/SDZ_config.json -O config.json\n",
-    "    #!pip install -r /home/studio-lab-user/SDZ/requirements_versions.txt\n",
+    "    !pip install -r /home/studio-lab-user/SDZ/requirements_versions.txt\n",
     "    \n",
     "    %cd /home/studio-lab-user/SDZC\n",
     "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/extra_model_paths.yaml\n",
+    "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/ComfyUI_user.css -O /home/studio-lab-user/SDZC/web/user.css\n",
+    "    !rm ~/SDZC/input/example.png\n",
     "    !pip install -r /home/studio-lab-user/SDZC/requirements.txt\n",
     "\n",
-    "    #!curl -Lo /home/studio-lab-user/SDZC/pantat88.py https://huggingface.co/pantat88/ui/resolve/main/pantat88.py\n",
-    "    #%run /home/studio-lab-user/SDZC/pantat88.py\n",
+    "\n",
     "    \n",
     "    !pip cache purge\n",
     "    !rm -rf ~/.cache\n",
@@ -360,19 +363,6 @@
     "    !git clone https://github.com/shadowcz007/comfyui-mixlab-nodes\n",
     "    #!git clone https://github.com/chrisgoringe/cg-use-everywhere\n",
     "\n",
-    "\n",
-    "\n",
-    "    %cd -q ~/SDZC\n",
-    "    !pip install opencv-python==4.7.0.72 transformers==4.26.1 tokenizers clip-interrogator > /dev/null\n",
-    "    ![ -f \"custom_nodes/ComfyUI-Manager/scripts/colab-dependencies.py\" ] && python \"custom_nodes/ComfyUI-Manager/scripts/colab-dependencies.py\" > /dev/null\n",
-    "    \n",
-    "\n",
-    "\n",
-    "    #%cd /home/studio-lab-user/SDZC/web/scripts\n",
-    "    #!wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/ComfyUI_app.js -O app.js\n",
-    "    %cd /home/studio-lab-user/SDZC/web\n",
-    "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/ComfyUI_user.css -O user.css\n",
-    "    !rm ~/SDZC/input/example.png\n",
     "\n",
     "\n",
     "    !mkdir -p /tmp/ESRGAN\n",
