--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -107,6 +107,8 @@
     "\n",
     "def extensions_code():\n",
     "    %conda install -q -y aria2\n",
+    "    !pip install --upgrade torchsde\n",
+    "\n",
     "\n",
     "    folderext = '/home/studio-lab-user/SDZ/extensions'\n",
     "\n",
