--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -89,7 +89,7 @@
     "    %cd /home/studio-lab-user/SDZC\n",
     "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/extra_model_paths.yaml\n",
     "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/ComfyUI_user.css -O /home/studio-lab-user/SDZC/web/user.css\n",
-    "    !rm ~/SDZC/input/example.png\n",
+    "    !rm /home/studio-lab-user/SDZC/input/example.png\n",
     "    !pip install -r /home/studio-lab-user/SDZC/requirements.txt\n",
     "\n",
     "\n",
