fix init comfyu 2 option

--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -45,11 +45,13 @@
     "    #!conda install -q -y -n base python=3.10.12\n",
     "\n",
     "\n",
-    "    !pip install -q --upgrade torchsde\n",
+    "    #!pip install -q --upgrade torchsde\n",
+    "    #%pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu118\n",
     "    !pip install -q --upgrade pip\n",
     "    !pip install -q --upgrade psutil\n",
     "    !pip install -q pytz\n",
     "    !pip install pyngrok\n",
+    "    %pip install tqdm\n",
     "    #!pip install requests\n",
     "    #!pip install -q tensorflow\n",
     "    \n",
@@ -60,7 +62,6 @@
     "    %pip install -q opencv-python-headless huggingface-hub\n",
     "    !pip3 install --upgrade requests\n",
     "    !pip install -q torch==2.0.1+cu118 torchvision==0.15.2+cu118 torchaudio==2.0.2+cu118 torchtext==0.15.2 torchdata==0.6.1 --extra-index-url https://download.pytorch.org/whl/cu118 -U\n",
-    "    \n",
     "    !pip install -q xformers==0.0.20 triton==2.0.0 -U\n",
     "\n",
     "    #!pip install opencv-python-headless ; pip install  opencv-contrib-python ; pip install opencv-python\n",
@@ -475,9 +476,8 @@
     "\n",
     "            %cd ~/SDZ/models/Stable-diffusion\n",
     "            #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/XpucT/Deliberate/resolve/main/Deliberate_v2.safetensors -o d2.safetensors\n",
-    "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/XpucT/Deliberate/resolve/main/Deliberate_v4.safetensors -o d4.safetensors\n",
+    "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/XpucT/Deliberate/resolve/main/Deliberate_v5.safetensors -o d5.safetensors\n",
     "            #!wget --timestamping https://huggingface.co/SimianLuo/LCM_Dreamshaper_v7/resolve/main/LCM_Dreamshaper_v7_4k.safetensors\n",
-    "            #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/XpucT/Deliberate/resolve/main/Deliberate_v3.safetensors\n",
     "            #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://civitai.com/api/download/models/143906\n",
     "            #!wget --no-check-certificate --content-disposition https://civitai.com/api/download/models/15236\n",
     "\n",
@@ -613,53 +613,138 @@
     "    \n",
     "def opcion3():\n",
     "    %cd /home/studio-lab-user/SDZ\n",
-    "    clear_output()\n",
+    "    import subprocess\n",
+    "    from threading import Timer\n",
+    "    from queue import Queue\n",
+    "    from pyngrok import ngrok\n",
+    "    import os\n",
+    "    \n",
+    "    def ngrok_tunnel(port, queue, auth_token):\n",
+    "        ngrok.set_auth_token(auth_token)\n",
+    "        url = ngrok.connect(port)\n",
+    "        queue.put(url)\n",
     "\n",
-    "    print(COLOR_WHITE + \"CREATE NGROK TOKEN >>> https://dashboard.ngrok.com/get-started/your-authtoken\" + COLOR_RESET)\n",
-    "    print(COLOR_CYAN + \"SDZ CANT RUN IF YOU ENTER A INVALID NGROK TOKEN\" + COLOR_RESET)\n",
+    "    def launch_sdz(choice, ngrok_token, sage_url, args):\n",
+    "        if choice == \"1\" and ngrok_token:\n",
+    "            ngrok_output_queue = Queue()\n",
+    "            ngrok_thread = Timer(2, ngrok_tunnel, args=(8188, ngrok_output_queue, ngrok_token))\n",
+    "            ngrok_thread.start()\n",
+    "            ngrok_thread.join()\n",
+    "            ngrok_url = ngrok_output_queue.get().public_url\n",
+    "            print(\"Ngrok URL:\", ngrok_url)\n",
+    "        elif choice == \"2\" and sage_url:\n",
+    "            studio_url = f'{sage_url}/studiolab/default/jupyter/proxy/8188/'\n",
+    "            print(\"SageMaker Studio Lab URL:\", studio_url)\n",
+    "        else:\n",
+    "            print(\"Invalid choice or missing information.\")\n",
+    "            return\n",
+    "\n",
+    "        os.system(f\"COMMANDLINE_ARGS='{args}' python launch.py 2>/dev/null | grep -o 'URL: https://[^ ]*'\")\n",
+    "\n",
+    "    # Mostrar menú de opciones\n",
     "    print(\" \")\n",
-    "    ngrok_token = input(\" Insert ngrok token:\")\n",
-    "    clear_output()\n",
-    "    print(COLOR_CYAN + \"SDZ RUNNING\" + COLOR_RESET)\n",
-    "    SDZ_Args = f\"--ngrok {ngrok_token} --api --enable-insecure-extension-access --xformers --theme=dark --no-download-sd-model --disable-safe-unpickle\"\n",
-    "    !COMMANDLINE_ARGS=\"{SDZ_Args}\" python launch.py 2>&1 | grep -o 'URL: https://[^ ]*'\n",
+    "    print(COLOR_CYAN + \"SDZ MENU:\" + COLOR_RESET)\n",
+    "    print(\"1. Use Ngrok\")\n",
+    "    print(\"2. Use SageMaker\")\n",
+    "    print(\" \")\n",
+    "    choice = input(\" Select an option:\").strip()\n",
+    "\n",
+    "    ngrok_token = \"\"\n",
+    "    sage_url = \"\"\n",
+    "    SDZ_Args = \"--api --enable-insecure-extension-access --xformers --theme=dark --no-download-sd-model --disable-safe-unpickle\"\n",
+    "\n",
+    "    if choice == \"1\":\n",
+    "        clear_output()\n",
+    "        print(\" \")\n",
+    "        print(COLOR_WHITE + \"CREATE NGROK TOKEN >>> https://dashboard.ngrok.com/get-started/your-authtoken\" + COLOR_RESET)\n",
+    "        print(COLOR_CYAN + \"SDZC CANT RUN IF YOU ENTER A INVALID NGROK TOKEN\" + COLOR_RESET)\n",
+    "        print(\" \")\n",
+    "        ngrok_token = input(\"Insert ngrok token: \").strip()\n",
+    "        clear_output()\n",
+    "        \n",
+    "    elif choice == \"2\":\n",
+    "        clear_output()\n",
+    "        print(\" \")\n",
+    "        print(COLOR_WHITE + \"COPY AND PASTE YOUR URL UP UNTIL EXAMPLE >>> https://abcdefghijkl123.studio.us-east-2.sagemaker.aws\" + COLOR_RESET)\n",
+    "        print(COLOR_CYAN + \"SDZC CANT RUN IF YOU ENTER A INVALID SAGEMAKER URL\" + COLOR_RESET)\n",
+    "        print(\" \")\n",
+    "        sage_url = input(\"Insert sagemaker url: \").strip()\n",
+    "        clear_output()\n",
+    "\n",
+    "    launch_sdz(choice, ngrok_token, sage_url, SDZ_Args)\n",
+    "\n",
     "    !pip cache purge\n",
     "    !rm -rf ~/.cache\n",
     "    clear_output()\n",
     "    print(COLOR_CYAN + \"SDZ FINISH\" + COLOR_RESET)\n",
     "    \n",
     "def opcion4():\n",
-    "    %cd /home/studio-lab-user/SDZC\n",
-    "    clear_output()\n",
-    "\n",
-    "    print(COLOR_WHITE + \"CREATE NGROK TOKEN >>> https://dashboard.ngrok.com/get-started/your-authtoken\" + COLOR_RESET)\n",
-    "    print(COLOR_CYAN + \"SDZ CANT RUN IF YOU ENTER A INVALID NGROK TOKEN\" + COLOR_RESET)\n",
-    "    print(\" \")\n",
-    "    ngrok_token = input(\" Insert ngrok token:\")\n",
-    "    clear_output()\n",
-    "    print(COLOR_CYAN + \"SDZ RUNNING\" + COLOR_RESET)\n",
+    "    %cd /home/studio-lab-user/SDZ\n",
+    "    import subprocess\n",
     "    from threading import Timer\n",
     "    from queue import Queue\n",
     "    from pyngrok import ngrok\n",
+    "    import os\n",
     "\n",
-    "    def ngrok_tunnel(port,queue,auth_token):\n",
+    "    def ngrok_tunnel(port, queue, auth_token):\n",
     "        ngrok.set_auth_token(auth_token)\n",
     "        url = ngrok.connect(port)\n",
     "        queue.put(url)\n",
     "\n",
-    "    ngrok_output_queue = Queue()\n",
-    "    ngrok_thread = Timer(2, ngrok_tunnel, args=(8188, ngrok_output_queue, ngrok_token))\n",
-    "    ngrok_thread.start()\n",
-    "    ngrok_thread.join()\n",
-    "    #!rm -r /home/studio-lab-user/.ngrok2\n",
-    "    print(ngrok_output_queue.get())\n",
+    "    def launch_comfy(choice, ngrok_token, sage_url, args):\n",
+    "        if choice == \"1\" and ngrok_token:\n",
+    "            ngrok_output_queue = Queue()\n",
+    "            ngrok_thread = Timer(2, ngrok_tunnel, args=(8188, ngrok_output_queue, ngrok_token))\n",
+    "            ngrok_thread.start()\n",
+    "            ngrok_thread.join()\n",
+    "            ngrok_url = ngrok_output_queue.get().public_url\n",
+    "            print(\"Ngrok URL:\", ngrok_url)\n",
+    "        elif choice == \"2\" and sage_url:\n",
+    "            studio_url = f'{sage_url}/studiolab/default/jupyter/proxy/8188/'\n",
+    "            print(\"SageMaker Studio Lab URL:\", studio_url)\n",
+    "        else:\n",
+    "            print(\"Invalid choice or missing information.\")\n",
+    "            return\n",
     "\n",
-    "    SDZ_Args = f\"--ngrok {ngrok_token} --dont-print-server --xformers --theme=dark\"\n",
-    "    !COMMANDLINE_ARGS=\"{SDZ_Args}\" python main.py 2>&1 | grep -o 'URL: https://[^ ]*'\n",
+    "        os.system(f\"COMMANDLINE_ARGS='{args}' python main.py 2>/dev/null | grep -o 'URL: https://[^ ]*'\")\n",
+    "\n",
+    "    # Mostrar menú de opciones\n",
+    "    print(\" \")\n",
+    "    print(COLOR_CYAN + \"SDZC MENU:\" + COLOR_RESET)\n",
+    "    print(\"1. Use Ngrok\")\n",
+    "    print(\"2. Use SageMaker\")\n",
+    "    print(\" \")\n",
+    "    choice = input(\" Select an option:\").strip()\n",
+    "\n",
+    "    ngrok_token = \"\"\n",
+    "    sage_url = \"\"\n",
+    "    SDZC_Args = \"--dont-print-server --theme=dark --preview-method auto --enable-cors-header --use-pytorch-cross-attention\"\n",
+    "\n",
+    "    if choice == \"1\":\n",
+    "        clear_output()\n",
+    "        print(\" \")\n",
+    "        print(COLOR_WHITE + \"CREATE NGROK TOKEN >>> https://dashboard.ngrok.com/get-started/your-authtoken\" + COLOR_RESET)\n",
+    "        print(COLOR_CYAN + \"SDZC CANT RUN IF YOU ENTER A INVALID NGROK TOKEN\" + COLOR_RESET)\n",
+    "        print(\" \")\n",
+    "        ngrok_token = input(\"Insert ngrok token: \").strip()\n",
+    "        clear_output()\n",
+    "        \n",
+    "    elif choice == \"2\":\n",
+    "        clear_output()\n",
+    "        print(\" \")\n",
+    "        print(COLOR_WHITE + \"COPY AND PASTE YOUR URL UP UNTIL EXAMPLE >>> https://abcdefghijkl123.studio.us-east-2.sagemaker.aws\" + COLOR_RESET)\n",
+    "        print(COLOR_CYAN + \"SDZC CANT RUN IF YOU ENTER A INVALID SAGEMAKER URL\" + COLOR_RESET)\n",
+    "        print(\" \")\n",
+    "        sage_url = input(\"Insert sagemaker url: \").strip()\n",
+    "        clear_output()\n",
+    "\n",
+    "    launch_comfy(choice, ngrok_token, sage_url, SDZC_Args)\n",
+    "\n",
     "    !pip cache purge\n",
     "    !rm -rf ~/.cache\n",
     "    clear_output()\n",
-    "    print(COLOR_CYAN + \"SDZ FINISH\" + COLOR_RESET)\n",
+    "    print(COLOR_CYAN + \"SDZC FINISH\" + COLOR_RESET)\n",
+    "\n",
     "       \n",
     "def opcion0():\n",
     "    clear_output()\n",
