--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -613,65 +613,16 @@
     "    \n",
     "def opcion3():\n",
     "    %cd /home/studio-lab-user/SDZ\n",
-    "    import subprocess\n",
-    "    from threading import Timer\n",
-    "    from queue import Queue\n",
-    "    from pyngrok import ngrok\n",
-    "    import os\n",
-    "    \n",
-    "    def ngrok_tunnel(port, queue, auth_token):\n",
-    "        ngrok.set_auth_token(auth_token)\n",
-    "        url = ngrok.connect(port)\n",
-    "        queue.put(url)\n",
-    "\n",
-    "    def launch_sdz(choice, ngrok_token, sage_url, args):\n",
-    "        if choice == \"1\" and ngrok_token:\n",
-    "            ngrok_output_queue = Queue()\n",
-    "            ngrok_thread = Timer(2, ngrok_tunnel, args=(8188, ngrok_output_queue, ngrok_token))\n",
-    "            ngrok_thread.start()\n",
-    "            ngrok_thread.join()\n",
-    "            ngrok_url = ngrok_output_queue.get().public_url\n",
-    "            print(\"Ngrok URL:\", ngrok_url)\n",
-    "        elif choice == \"2\" and sage_url:\n",
-    "            studio_url = f'{sage_url}/studiolab/default/jupyter/proxy/8188/'\n",
-    "            print(\"SageMaker Studio Lab URL:\", studio_url)\n",
-    "        else:\n",
-    "            print(\"Invalid choice or missing information.\")\n",
-    "            return\n",
-    "\n",
-    "        os.system(f\"COMMANDLINE_ARGS='{args}' python launch.py 2>/dev/null | grep -o 'URL: https://[^ ]*'\")\n",
-    "\n",
-    "    # Mostrar menú de opciones\n",
-    "    print(\" \")\n",
-    "    print(COLOR_CYAN + \"SDZ MENU:\" + COLOR_RESET)\n",
-    "    print(\"1. Use Ngrok\")\n",
-    "    print(\"2. Use SageMaker\")\n",
-    "    print(\" \")\n",
-    "    choice = input(\" Select an option:\").strip()\n",
-    "\n",
-    "    ngrok_token = \"\"\n",
-    "    sage_url = \"\"\n",
-    "    SDZ_Args = \"--api --enable-insecure-extension-access --xformers --theme=dark --no-download-sd-model --disable-safe-unpickle\"\n",
-    "\n",
-    "    if choice == \"1\":\n",
-    "        clear_output()\n",
-    "        print(\" \")\n",
-    "        print(COLOR_WHITE + \"CREATE NGROK TOKEN >>> https://dashboard.ngrok.com/get-started/your-authtoken\" + COLOR_RESET)\n",
-    "        print(COLOR_CYAN + \"SDZC CANT RUN IF YOU ENTER A INVALID NGROK TOKEN\" + COLOR_RESET)\n",
-    "        print(\" \")\n",
-    "        ngrok_token = input(\"Insert ngrok token: \").strip()\n",
-    "        clear_output()\n",
-    "        \n",
-    "    elif choice == \"2\":\n",
-    "        clear_output()\n",
-    "        print(\" \")\n",
-    "        print(COLOR_WHITE + \"COPY AND PASTE YOUR URL UP UNTIL EXAMPLE >>> https://abcdefghijkl123.studio.us-east-2.sagemaker.aws\" + COLOR_RESET)\n",
-    "        print(COLOR_CYAN + \"SDZC CANT RUN IF YOU ENTER A INVALID SAGEMAKER URL\" + COLOR_RESET)\n",
-    "        print(\" \")\n",
-    "        sage_url = input(\"Insert sagemaker url: \").strip()\n",
-    "        clear_output()\n",
-    "\n",
-    "    launch_sdz(choice, ngrok_token, sage_url, SDZ_Args)\n",
+    "    clear_output()\n",
+    "  \n",
+    "    print(COLOR_WHITE + \"CREATE NGROK TOKEN >>> https://dashboard.ngrok.com/get-started/your-authtoken\" + COLOR_RESET)\n",
+    "    print(COLOR_CYAN + \"SDZ CANT RUN IF YOU ENTER A INVALID NGROK TOKEN\" + COLOR_RESET)\n",
+    "    print(\" \")\n",
+    "    ngrok_token = input(\" Insert ngrok token:\")\n",
+    "    clear_output()\n",
+    "    print(COLOR_CYAN + \"SDZ RUNNING\" + COLOR_RESET)\n",
+    "    SDZ_Args = f\"--ngrok {ngrok_token} --api --enable-insecure-extension-access --xformers --theme=dark --no-download-sd-model --disable-safe-unpickle\"\n",
+    "    !COMMANDLINE_ARGS=\"{SDZ_Args}\" python launch.py 2>&1 | grep -o 'URL: https://[^ ]*'\n",
     "\n",
     "    !pip cache purge\n",
     "    !rm -rf ~/.cache\n",
@@ -679,7 +630,7 @@
     "    print(COLOR_CYAN + \"SDZ FINISH\" + COLOR_RESET)\n",
     "    \n",
     "def opcion4():\n",
-    "    %cd /home/studio-lab-user/SDZ\n",
+    "    %cd /home/studio-lab-user/SDZC\n",
     "    import subprocess\n",
     "    from threading import Timer\n",
     "    from queue import Queue\n",
@@ -738,6 +689,7 @@
     "        sage_url = input(\"Insert sagemaker url: \").strip()\n",
     "        clear_output()\n",
     "\n",
+    "    print(COLOR_CYAN + \"SDZC RUNNING\" + COLOR_RESET)\n",
     "    launch_comfy(choice, ngrok_token, sage_url, SDZC_Args)\n",
     "\n",
     "    !pip cache purge\n",
